--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   />
   <title>Calendars</title>
 </head>
-<body>
+<body style="margin: 0 auto">
 <div id="app"></div>
 <script src="../src/index.js"></script>
 </body>
