--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   />
   <title>Calendars</title>
 </head>
-<body style="margin: 0 auto">
+<body style="margin: 0 auto; background-color: #bfe299; background-image: linear-gradient(315deg, #bfe299 0%, #66b5f6 74%); background-attachment: fixed;">
 <div id="app"></div>
 <script src="../src/index.js"></script>
 </body>
